--- a/index.html
+++ b/index.html
@@ -805,13 +805,8 @@
                   <div class="client__image">
                     <img src="./images/profile2.jpg" alt="profile">
                   </div>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
-                    quibusdam consequatur
-                    eligendi unde officia ex quae.ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic
-                    nesciunt tempore
-                    quibusdam consequatur eligendi unde officia ex quae.adipisicing elit. Recusandae fuga hic
-                    nesciunt tempore
-                    quibusdam consequatur eligendi unde officia ex quae.</p>
+                  <p>“I’ve always been attracted to the more revolutionary changes I don’t know why. Because they’re harder. They’re much more stressful emotionally. 
+                    And you usually go through a period where everybody tells you that you’ve completely failed.” .</p>
                   <div class="client__info">
                     <h3>John Smith</h3>
                     <span>Founder at Apple</span>
