saving to github

--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                   <div class="client__image">
                     <img src="./images/profile2.jpg" alt="profile">
                   </div>
-                  <p>“I’ve always been attracted to the more revolutionary changes I don’t know why. Because they’re harder. They’re much more stressful emotionally. 
+                  <p>“I have always been attracted to the more revolutionary changes I don’t know why. Because they’re harder. They’re much more stressful emotionally. 
                     And you usually go through a period where everybody tells you that you’ve completely failed.” .</p>
                   <div class="client__info">
                     <h3>John Smith</h3>
