i changed name john smith to steve jobs

--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                   <p>“I have always been attracted to the more revolutionary changes I don’t know why. Because they’re harder. They’re much more stressful emotionally. 
                     And you usually go through a period where everybody tells you that you’ve completely failed.” .</p>
                   <div class="client__info">
-                    <h3>John Smith</h3>
+                    <h3>steve jobs</h3>
                     <span>Founder at Apple</span>
                   </div>
                 </div>
